ansible/travis-ansible/prometheus-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: prometheus-ingress
    annotations:
        nginx.ingress.kubernetes.io/client_max_body_size: 50m
    # labels:
    #   app: prometheus-ingress
spec:
    rules:
        - host: prometheus.wtalking.chat
          http:
              paths:
                  - path: /
                    backend:
                        serviceName: prometheus-grafana
                        servicePort: 80
